vote-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  labels:
    app: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: husseinyabaq/voting-app:latest
        ports:
        - containerPort: 80
          name: vote-port
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  labels:
    app: vote
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 80
  selector:
    app: vote
